--- a/templates/dashboard/clients.html
+++ b/templates/dashboard/clients.html
@@ -55,9 +55,9 @@
 			          	<span class="navbar-item text-md">Clients</span>
 			        </li>
 			        <li class="nav-item">
-				        <a class="nav-link text-muted" data-toggle="modal" data-target="#modal-new" title="New client">
+				        <a class="nav-link text-muted" data-toggle="modal" data-target="#add-client-modal" title="New client">
 				            <span class="">
-				            	<i class="fa fa-fw fa-plus"></i>
+				            	<i class="fa fa-fw fa-plus"></i>s
 				            	<span class="hidden-sm-down">New client</span>
 				            </span>
 				        </a>
@@ -257,49 +257,5 @@
 {% endblock %}
 
 {% block modals %}
-<div class="modal fade" id="modal-new">
-	<div class="modal-dialog modal-lg">
-	  	<div class="modal-content">
-	  		<div class="modal-header _600">
-	  			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-		          <span aria-hidden="true">&times;</span>
-		        </button>
-	  			New Client
-	  		</div>
-	  		<div class="modal-body">
-			    <form class="form-horizontal" method="post">
-                    {% csrf_token %}
-                    <input type="text" name="modal-type" value="ClientForm" class="form-control" hidden>
-                    <input type="number" name="user" value="{{ user.id }}"  hidden>
-				    <div class="form-group row">
-				        <label class="col-lg-2 form-control-label">Name:</label>
-				        <div class="col-lg-8">
-					        <input type="text" class="form-control" name="name">
-				        </div>
-				    </div>
-				    <div class="form-group row">
-				        <label class="col-lg-2 form-control-label">Email:</label>
-				        <div class="col-lg-8">
-				          	<input type="email" class="form-control" name="email">
-				        </div>
-				    </div>
-				    <div class="form-group row">
-				        <label class="col-lg-2 form-control-label">Phone number:</label>
-				        <div class="col-lg-10">
-				          	<div class="col-lg-8">
-				          	    <input type="tel" class="form-control" name="phone_number">
-				            </div>
-				        </div>
-				    </div>
-				    <div class="form-group row">
-				        <div class="col-lg-8 offset-lg-2">
-				          	<button type="submit" class="btn primary btn-sm p-x-md">Save</button>
-				        </div>
-				    </div>
-			    </form>
-		    </div>
-	  	</div>
-  	</div>
-</div>
 {% endblock %}
 <!-- ############ PAGE END-->
